<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:weightSum="10"
    tools:parentTag="android.widget.LinearLayout">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/title_color_code"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/sharp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sharp"
        android:layout_weight="0.5"
        android:textAlignment="textEnd" />

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="8"
        android:inputType="text"
        android:layout_weight="2.5"
        android:textAlignment="textEnd"
        tools:text="FFFFFFFF" />


    <CheckBox
        android:id="@+id/alphaCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/alpha"/>

    <Button
        android:id="@+id/copyButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/button_copy"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3"/>
</merge>