<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <View
        android:id="@+id/colorView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"/>

    <com.example.colorpicker.ValueChooser
        android:id="@+id/vcRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        app:color="@color/red"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:max="255"
        app:title="@string/title_red" />

    <com.example.colorpicker.ValueChooser
        android:id="@+id/vcGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        app:color="@color/green"
        app:layout_constraintTop_toBottomOf="@id/vcRed"
        app:max="255"
        app:title="@string/title_green" />

    <com.example.colorpicker.ValueChooser
        android:id="@+id/vcBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        app:color="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/vcGreen"
        app:max="255"
        app:title="@string/title_blue" />

    <com.example.colorpicker.ColorCodeChooser
        android:id="@+id/colorCodeChooser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        android:layout_marginBottom="@dimen/margin_common"
        app:layout_constraintTop_toBottomOf="@id/vcBlue"/>

</androidx.constraintlayout.widget.ConstraintLayout>