<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTitleEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineTitleEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="title" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_common"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guidelineTitleEnd"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonMinus10"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus10"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/input"
        app:layout_constraintStart_toEndOf="@id/guidelineTitleEnd"
        app:layout_constraintEnd_toStartOf="@id/buttonMinus1"/>

    <Button
        android:id="@+id/buttonMinus1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_minus1"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/input"
        app:layout_constraintStart_toEndOf="@id/buttonMinus10"
        app:layout_constraintEnd_toStartOf="@id/input"/>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="value"
        android:inputType="number"
        android:maxLines="1"
        android:textAlignment="textEnd"
        android:layout_marginBottom="@dimen/margin_common"
        android:layout_marginTop="@dimen/padding_common"
        app:layout_constraintTop_toBottomOf="@id/seekBar"
        app:layout_constraintStart_toEndOf="@id/buttonMinus1"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus1"/>

    <Button
        android:id="@+id/buttonPlus1"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus1"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/input"
        app:layout_constraintStart_toEndOf="@id/input"
        app:layout_constraintEnd_toStartOf="@id/buttonPlus10"/>

    <Button
        android:id="@+id/buttonPlus10"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus10"
        android:background="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/input"
        app:layout_constraintStart_toEndOf="@id/buttonPlus1"
        app:layout_constraintEnd_toEndOf="parent"/>

</merge>